<resources>
    <string name="app_name">Spot a Bee</string>
    <string name="title_image_scanner">Image Scanner</string>
    <string name="drawer_header_title">Menu</string>
    <string name="drawer_header_score">Score: %1$d</string>
    <string name="drawer_header_score_newbie">Newbie</string>
    <string name="drawer_header_score_intermediate">Intermediate</string>
    <string name="drawer_header_score_senior">Senior</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_about_us">About Us</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_map">Bee Maps</string>
    <string name="title_information">Information</string>
    <string name="title_camera">Camera</string>
    <string name="take_photo_button_text">Take Photo</string>
    <string name="title_my_gallery">My Gallery</string>
    <string name="title_media">Media</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Splash">Splash</string>

    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="title_activity_about_us">About Us</string>
    <string name="paragraph1">"If the bee disappeared off the surface of the globe then man would only have four years of life left. No more bees, no more pollination, no more plants, no more animals, no more man"  This single quote captures the key role that bees play in the survival of planet earth.</string>
    <string name="paragraph2">Unfortunately the last 60 years has seen the loss of much of their natural habitat Including over 90% of the wildflower meadows in the UK. Intensive farming (mono-cultures), pesticides, climate change and pests such as the Varroa might have contributed to a marked decline in bee numbers in our rural landscapes  In contrast to the countryside our towns, parks and suburban back gardens are stocked with a rich diversity of plants and flowers from around the world and as such could serve as an oasis for our winged friends.</string>
    <string name="paragraph3">To determine if this is the case we are seeking the help of the people of Cardiff to undertake a survey of the bee-friendly plants of Cardiff. The next time you are in the garden or walking the dog keep a look out for bees and if you see any take a picture on your mobile phone of the plants they are buzzing around and send them to us via the website. Video are also welcome.  Additional information, such as the name of the plant is welcomed but not essential. Short video clips are also welcome. Indeed we are particularly keen for people to send us recordings of the sound of the bees in their back gardens. Nothing says summer more than the contented buzz of a happy bee on a hot afternoon!</string>

    <!-- MapActivity strings -->
    <string name="location_error">Could not determine location!</string>

    <!-- InfoPageFragment strings -->
    <string name="info_instructions_content">Instructions and Information.
        There are three main parts to this application, which I will now explain. Please read the about us section for some background information on what we are doing and why.
        Firstly there is the camera functionality. If you press the camera option on the main menu or within the navigation drop down, the camera on your phone should open so that you can take a picture in the normal way. If your phone does not have a camera then unfortunately you will not be able to use the application.
        Secondly we have the gallery. this is where the images you have taken with the camera will be stored.
        Thirdly we have the map. When you open the map, it should zoom in on your current location. You can drag with your fingers to see around the area local to you.</string>


    <string name="manual_location_message">We were unable to determine your location. Please zoom in and tap your location on the map.</string>
    <string name="manual_location_pinned">You have pinned your location. If you have made a mistake, please tap again. </string>
    <string name="manual_location_confirm">Confirm selected location</string>

    <string name="number_of_bees_intro">Please enter how many bees are in the photo.</string>
    <string name="number_of_bees_confirm">Save Photo</string>

    <string name="action_exit">Exit</string>
    <string name="copied">Copied To Clipboard</string>
    <string name="hashtags_default">It looks empty here! Choose a picture by tapping above</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="share_subject">Hashtags</string>
    <string name="share_title">Amazing Hashtags</string>
    <string name="share_using">Share Using</string>
    <string name="welcome">Welcome to AutoHash</string>
    <string name="analyzing">Analyzing Your Image</string>
    <string name="getting_hashtags">Getting Best Hashtags For You</string>
    <string name="something_wrong">opps! Something went wrong</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="add_photo">Add Photo!</string>
    <string name="perm_allow">You need to allow writing to external storage to use this app</string>
    <string name="powered">Powered by Imagga</string>
</resources>
