<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/menu_about_us"
            android:title="@string/title_about_us" />
        <item
            android:id="@+id/menu_bee_map"
            android:title="@string/title_activity_map"/>
        <item
            android:id="@+id/menu_information"
            android:title="@string/title_information"/>
        <item
            android:id="@+id/menu_camera"
            android:title="@string/title_camera"/>
        <item
            android:id="@+id/menu_imagga"
            android:title="@string/title_image_scanner"/>
        <item
            android:id="@+id/menu_media"
            android:title="@string/title_media"/>
    </group>

    <!--<item android:title="@string/drawer_group_links">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_ext_docs"-->
                <!--android:icon="@drawable/ic_launch"-->
                <!--android:title="@string/drawer_link_docs" />-->
            <!--<item-->
                <!--android:id="@+id/nav_ext_phone"-->
                <!--android:icon="@drawable/ic_phone"-->
                <!--android:title="@string/drawer_links_phone" />-->
        <!--</menu>-->
    <!--</item>-->


</menu>
