<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_aboutus"
        android:title="@string/title_aboutus" />

    <item
        android:id="@+id/navigation_beemap"
        android:title="@string/title_activity_map" />

    <item
        android:id="@+id/navigation_information"
        android:title="@string/title_information"/>

    <item
        android:id="@+id/navigation_camera"
        android:title="@string/title_camera"/>

    <item
        android:id="@+id/navigation_mygallery"
        android:title="@string/title_mygallery"/>

    <item
        android:id="@+id/navigation_media"
        android:title="@string/title_media"/>


</menu>
